[project]
name = "hamilton"
version = "1.0.0"
description = "Hi"
authors = [
    {name = "Starman", email = "starman@space.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "dash",
    "dash-bootstrap-components",
    "dash-bootstrap-templates",
    "skyfield",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hamilton"]